lib_LTLIBRARIES = libbutton.la

libbutton_la_CFLAGS=$(all_includes)
libbutton_la_LDADD=$(all_libraries)
libbutton_la_SOURCES = \
	ptt-button.h \
	ptt-button-list.c \
	ptt-button-list.h \
	ptt.c \
	ptt-device.c \
	ptt-device.h \
	ptt-device-list.c \
	ptt-device-list.h \
	ptt-drv-evdev.c \
	ptt-drv-evdev.h \
	ptt-drv-gpio.c \
	ptt-drv-gpio.h
libbutton_la_HEADERS = \
	ptt.h
